2002-09-05  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_run.c (bk_run_register_bnbio): 
	(bk_run_unregister_bnbio): 
	(bk_run_bnbio_cancel): Functions for managing blocking
	[-non-blocking] i/o so that blocking calls can be cancelled.

	* lib/b_bnbio.c (bk_iohh_bnbio_read, write): Check for new bnbio
	cancel flag.

2002-09-05  Seth Robertson  <seth@winwood.sysdetect.com>

	* lib/b_relay.c (bk_relay_ioh): Add BK_RELAY_IOH_DONTCLOSEFDS for
	various special purposes.
	(bk_relay_ioh): Add BNK_RELAY_IOH_NOSHUTDOWN for same

	* lib/b_config.c (bcf_create): You must specify that this is
	unordered.

	* lib/b_ioh.c (bk_ioh_close): You must specify that this is
	unordered.

	* lib/b_config.c (bcf_destroy): DLL might not be created yet

2002-09-04  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/Makefile (BK_LARGE_LIBSRC): add new b_strcode.c

	* lib/b_strcode.c: split more functions out of b_strconv.c so that
	Insure won't choke on it

	* lib/b_strconv.c (bk_string_flagtoa): return 0 on success, per docs

2002-09-04  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_string.c: String registry functions (maps a string to a
	unique ID for quick comparison and perfect hashing).
	(bk_string_registry_idbystr): Program for empty repository boundry
	case (doh!).

2002-08-31  Seth Robertson  <seth@hawking.sysdetect.com>

	* lib/b_netutils.c (bk_inet_ntoa): Need to null terminate
	addresses.  I *hope* this will not break anything, and it was
	previously documented to require my change...
	
2002-08-27  Seth Robertson  <seth@winwood.sysdetect.com>

	* lib/b_string.c (bk_strhash): Combine old and new string hash
	functions into one, with flag selection, old default.

2002-08-27  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_oscompat.h (BK_FUNCNAME): Insure doesn't grok __func__

	* lib/b_string.c: weird insure++ error was just due to feeping
	creaturism of string functions; splitting b_string.c into two files